--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -1,9 +1,41 @@
+.modal-title{
+    font-family: 'Bebas Neue';
+    font-weight: 400;
+    font-size: 1.5em;
+}
+
+
+label{
+    font-family: 'Bebas Neue';
+    font-weight: 400;
+    font-size: 1.3em;
+}
+
+input{
+    font-family: 'Helvetica, sans-serif';
+}
+
 .custom-select{
+    font-family: 'Helvetica, sans-serif';
     width: 100%;
 }
 
+.btn-secondary:hover{
+    background-color: #db5b02;
+    color: white;
+} 
+
+.dropdown-item{
+    font-family: 'Helvetica, sans-serif';
+}
+
 .alert-no-time{
-    color:red;
+    font-family: 'Bebas Neue';
+    font-weight: 400!important;
+    font-size: 1.0em;
+    color: white;
+    text-decoration: underline;
+    margin-left: 10px;
 }
 
 .loader {
@@ -31,4 +63,135 @@
 .dropdown-menu{
     width: 100%;
 }
+.submit-btn{
+    font-family: 'Bebas Neue';
+    font-weight: 400!important;
+    font-size: 1.2em;
+    background-color: #db5b02;
+    color: white;
+    font-weight: 600;
+    border: none;
+    text-transform: capitalize;
+    padding: 0.8vw 2vw;
+}
+.submit-btn:hover{
+    color: #db5b02;
+    background-color: black;
+}
+label.avail-time{
+    margin: none;
+}
+.modal-body{
+    /* font-family: bebas neue; */
+    padding: 2vw 4.5vw 0;
+}
+.modal-footer{
+    border: none;
+    padding: 2vw 4.2vw;
+}
+.checkbox{
+    padding: 1.5vw 0vw 0vw 0vw;
+    
+}
+.check-time p{
+    line-height: 1.2vw;
+    font-size: 16px;
+}
+.tab {
+    overflow: hidden;
+    border: 0px solid #ccc;
+    background-color: none;
+  }
+.tablinks{
+    font-family: 'Bebas Neue';
+    font-weight: 400!important;
+    font-size: 1.3em!important;
+    border-radius: 0.3vw 0.3vw 0 0;
+    
+}
+  
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+}
 
+/* Change background color of buttons on hover */
+
+
+/* Create an active/current tablink class */
+
+
+/* Style the tab content */
+.tabcontent, .tab button{
+    color: black;
+    font-weight: 600;
+}
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: none;
+    border-radius: 0 0.3vw 0.3vw 0.3vw;
+}
+
+/* Style the close button */
+.topright {
+    float: right;
+    cursor: pointer;
+    font-size: 28px;
+
+}
+
+.modal-appointment-btn1:hover, .modal-appointment-btn2:hover, .modal-appointment-btn3:hover{
+    opacity: 1;
+    background-color: #db5b02;
+    color: #ffff;
+}
+
+.modal-appointment-btn1{
+    background-color: #db5b02!important;
+    color: #ffff!important;
+}
+
+.modal-appointment-btn2{
+    opacity: 0.5;
+    background-color: #db5b02!important;
+}
+
+.active-state{
+    color: #ffff!important;
+}
+
+/* BOOTSTRAP OVERRIDES */
+
+
+.dropdown-menu{
+    width: 100%;
+}
+
+.time-holder
+{
+    padding: 5%;
+    border-radius: 0px 5px 5px 5px;
+    background: #db5b02;
+}
+
+.btn-secondary .dropdown-toggle{
+    color: #ffff!important;
+    background-color: #db5b02!important;
+    border-color: none!important;
+}
+
+.show{
+    display: block;
+}
+
+.hide{
+    display: none;
+}
