--- a/public/css/hero-section.css
+++ b/public/css/hero-section.css
@@ -70,7 +70,6 @@
     width: 60vw;
     border: none;
     display: flex;
-    
 }
 .mobhero-btn:hover {
     border-radius: 15px;
@@ -86,6 +85,7 @@
     letter-spacing: .3vw;
     font-weight: 300;
     color: #ffffff;
+    align-self: center;
 }
 /*End row1 */
 }
@@ -364,6 +364,7 @@
         padding:2vw;
         
     }
+
     .team-subimage {
         height: 200px;
         width: 200px;
@@ -447,10 +448,20 @@
         background-color: #1d1d1d;
         color: #ffffff;
         height:20%;
-        width: 70%;
+        width: 50%;
         border: none;
     }
 
+}
+.hero-icon{
+    color: white;
+    font-size: 22px;
+}
+.hero-icon:hover{
+    color: #db5b02;
+}
+.embed-responsive-16by9{
+    width: 100%;
 }
 /* End Desktop Version */
 
