--- a/public/css/hero-section.css
+++ b/public/css/hero-section.css
@@ -104,7 +104,8 @@
          
     }
     .hero-topbar {
-        background-color: rgb(0, 0, 0);
+        /* position: absolute; */
+        /* background-color: rgb(0, 0, 0); */
         height: 10%;
         display:flex;
         width: 100%;
@@ -158,7 +159,7 @@
         margin: 0vw 1.5vw 0 1vw;
     }
     .hero-content {
-        background-color: black;
+        /* background-color: black; */
         height: 90%;
         display:flex;
         width: 100%;
@@ -223,7 +224,8 @@
          
     }
     .hero-topbar {
-        background-color: rgb(0, 0, 0);
+        /* position: absolute; */
+        /* background-color: rgb(0, 0, 0); */
         height: 15%;
         display:flex;
         width: 100%;
@@ -278,7 +280,7 @@
         margin: 0vw 1.5vw 0 1vw;
     }
     .hero-content {
-        background-color: black;
+        /* background-color: black; */
         height: 85%;
         display:flex;
         width: 100%;
@@ -342,7 +344,8 @@
          
     }
     .hero-topbar {
-        background-color: rgb(0, 0, 0);
+        /* background-color: rgb(0, 0, 0); */
+        /* position: absolute; */
         height: 10%;
         display:flex;
         width: 100%;
@@ -402,7 +405,7 @@
         margin: 0vw 1.5vw 0 1vw;
     }
     .hero-content {
-        background-color: black;
+        /* background-color: black; */
         height: 90%;
         display:flex;
         width: 100%;
@@ -467,3 +470,31 @@
 
 
 /* || END HERO SECTION */
+
+
+
+#videoBG {
+    z-index: -1;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+}
+/* @media (min-aspect-ratio: 16/9) {
+    #videoBG {
+        width:100%;
+        height: auto;
+    }
+}
+@media (max-aspect-ratio: 16/9) {
+    #videoBG { 
+        width:auto;
+        height: 100%;
+    }
+}
+@media (max-width: 767px) {
+    #videoBG {
+        display: none;
+    }
+} */
