--- a/public/css/services.css
+++ b/public/css/services.css
@@ -13,8 +13,8 @@
     padding: 0;
  }
 .service-text{
-    padding:2vw 0;
-    margin: 2vw 0;
+    padding: 2vw 0!important;
+    /* margin: 2vw 0; */
 }
 .service-text h3{
     color:#db5b01;
