--- a/public/css/hero-section.css
+++ b/public/css/hero-section.css
@@ -101,7 +101,15 @@
     .hero-row {
         /* background-color: red; */
         height: 90%;
-         
+        position: relative;
+    }
+    .hero-row::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        z-index: 1;
     }
     .hero-topbar {
         /* position: absolute; */
@@ -112,6 +120,7 @@
         flex-direction:row;
         border: none;
         padding: 0;
+        z-index: 2;
     }
     .hero-logo {
         /* background-color: green; */
@@ -170,7 +179,7 @@
         height: 60%;
         width: 50%;
         padding:7vw 0 3vw 0;
-        
+        z-index: 2;
     }
     .hero-left-txt {
         /* background-color: orangered; */
@@ -221,7 +230,15 @@
     .hero-row {
         /* background-color: red; */
         height: 90%;
-         
+         position: relative;
+    }
+    .hero-row::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        z-index: 1;
     }
     .hero-topbar {
         /* position: absolute; */
@@ -231,7 +248,7 @@
         width: 100%;
         flex-direction:row;
         border: none;
-        
+        z-index: 2;
         
     }
     .hero-logo {
@@ -291,7 +308,7 @@
         height: 60%;
         width: 50%;
         padding:7vw 0 0 0;
-        
+        z-index: 2;
     }
     .hero-left-txt {
         /* background-color: orangered; */
@@ -341,7 +358,15 @@
     .hero-row {
         /* background-color: red; */
         height: 100%;
-         
+        position: relative;
+    }
+    .hero-row::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        z-index: 1;
     }
     .hero-topbar {
         /* background-color: rgb(0, 0, 0); */
@@ -352,7 +377,7 @@
         flex-direction:row;
         border: none;
         padding: 0;
-    
+        z-index: 2;
     }
     .hero-logo {
         /* background-color: green; */
@@ -416,7 +441,7 @@
         height: 60%;
         width: 70%;
         padding:3vw 0 0 0;
-        
+        z-index: 2;
     }
     .hero-left-txt {
         /* background-color: orangered; */
@@ -475,11 +500,12 @@
 
 #videoBG {
     z-index: -1;
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
+    position: absolute;
+    max-width: 100%; 
+    max-height: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 /* @media (min-aspect-ratio: 16/9) {
     #videoBG {
