--- a/public/css/hero-section.css
+++ b/public/css/hero-section.css
@@ -199,7 +199,7 @@
     .hero-left-txt button {
         border-radius: 15px;
         background-color: #db5b02;
-        height: 20%;
+        /* height: 20%; */
         width: 70%;
         border: none;
         font-family: 'Bebas Neue';
@@ -213,7 +213,7 @@
         border-radius: 15px;
         background-color: #1d1d1d;
         color: #ffffff;
-        height:20%;
+        /* height:20%; */
         width: 70%;
         border: none;
     }
@@ -328,7 +328,7 @@
     .hero-left-txt button {
         border-radius: 15px;
         background-color: #db5b02;
-        height: 20%;
+        /* height: 20%; */
         width: 70%;
         border: none;
         font-family: 'Bebas Neue';
@@ -342,7 +342,7 @@
         border-radius: 15px;
         background-color: #1d1d1d;
         color: #ffffff;
-        height:20%;
+        /* height:20%; */
         width: 70%;
         border: none;
     }
@@ -461,7 +461,7 @@
     .hero-left-txt button {
         border-radius: 15px;
         background-color: #db5b02;
-        height: 20%;
+        /* height: 20%; */
         width: 50%;
         border: none;
         font-family: 'Bebas Neue';
@@ -475,7 +475,7 @@
         border-radius: 15px;
         background-color: #1d1d1d;
         color: #ffffff;
-        height:20%;
+        /* height:20%; */
         width: 50%;
         border: none;
     }
